# XRoboToolkit_Realhand_Dexterous_Hand_Example

./: README.md  pyproject.toml  setup.sh  setup_conda.sh
assets/real_hand/: README.md
assets/real_hand/l6/left/: realhand_l6_left.urdf
assets/real_hand/l6/right/: robot.urdf
dependencies/dex_retargeting_local/: README.md  pyproject.toml
dependencies/dex_retargeting_local/dex_retargeting/: constants.py
dependencies/dex_retargeting_local/dex_retargeting/configs/offline/: linker_hand_left.yml  linker_hand_right.yml
dependencies/dex_retargeting_local/dex_retargeting/configs/teleop/: linker_hand_left.yml  linker_hand_right.yml  real_hand_left.yml  real_hand_right.yml
scripts/hardware/: teleop_realhand_l6_hardware.py
scripts/simulation/: teleop_dual_realhand_l6_mujoco.py  teleop_dual_realhand_l6_placo.py  teleop_realhand_l6_mujoco.py  teleop_realhand_l6_placo.py
xrobotoolkit_teleop/hardware/: realhand_l6_controller.py
